--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "ls-node-3-hw3",
+  "name": "ls-node-3-hw4",
   "version": "0.1.0",
   "private": true,
   "author": "Sergei Tereshkov",
   "dependencies": {
-    "pug": "^3.0.0",
+    "@sendgrid/mail": "^7.1.1",
     "crypto": "^1.0.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "formidable": "^1.2.2",
     "express-session": "^1.17.1",
-    "uuid": "^8.1.0",
+    "koa": "^2.12.0",
+    "koa-body": "^4.1.3",
+    "koa-pug": "^4.0.4",
+    "koa-router": "^9.0.1",
+    "koa-session": "^6.0.0",
+    "koa-static": "^5.0.0",
     "lowdb": "^1.0.0",
-    "nodemailer": "^6.4.8",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "pug": "^3.0.0",
+    "util": "^0.12.3",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "cz-customizable": "^6.2.0",
