--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "author": "Sergei Tereshkov",
   "dependencies": {
-    "@sendgrid/mail": "^7.1.1",
+    "@sendgrid/mail": "^7.2.0",
     "crypto": "^1.0.1",
     "express-session": "^1.17.1",
-    "koa": "^2.12.0",
-    "koa-body": "^4.1.3",
+    "koa": "^2.12.1",
+    "koa-body": "^4.2.0",
     "koa-pug": "^4.0.4",
     "koa-router": "^9.0.1",
     "koa-session": "^6.0.0",
@@ -20,16 +20,16 @@
   },
   "devDependencies": {
     "cz-customizable": "^6.2.0",
-    "eslint": "^7.1.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^2.0.5",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
   },
   "scripts": {
     "start": "node app.js"
